<resources>
    <string name="app_name">Ecommerce_hvpp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Danh mục</string>
    <string name="account">Tài khoản</string>
    <string name="favorite">Yêu thích</string>
    <string name="home">Trang chủ</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="product_list">Product List</string>
    <string name="category1">Category</string>
    <string name="ordered_list">Ordered List</string>
    <string name="messages">Messages</string>
    <string name="account1">Account</string>
    <string name="wish_list">Wish list</string>
    <string name="category2">Category</string>
    <string name="home1">Home</string>
    <string name="search">Search</string>
    <string name="order_history">Order History</string>
    <string name="order_list">Order List</string>
    <string-array name="type_array">
        <item>Club</item>
        <item>Nation</item>
    </string-array>
    <string-array name="season_array">
        <item>1995/1996</item>
        <item>1996/1997</item>
        <item>1997/1998</item>
        <item>1999/2000</item>
        <item>2001/2002</item>
        <item>2002/2003</item>
        <item>2006</item>
    </string-array>
    <string name="helper_text">*Required</string>
    <string name="required_field">This field is required</string>
    <string name="activated">Code:</string>
    <string name="unactivated">Hello:</string>
</resources>