<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/home1"
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"/>
    <item android:title="@string/category2"
        android:id="@+id/categoryFragment"
        android:icon="@drawable/baseline_category_24" />
    <item android:title="@string/search"
        android:id="@+id/searchFragment"
        android:icon="@drawable/baseline_search_24"/>
    <item android:title="@string/wish_list"
        android:id="@+id/wishListFragment"
        android:icon="@drawable/baseline_favorite_border_24"/>
    <item android:title="@string/account"
        android:id="@+id/accountFragment"
        android:icon="@drawable/baseline_account_circle_24" />
</menu>